# racing-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml  usage_examples.py
src/racing_mcp/: __init__.py  client.py  config.py  handlers.py  server.py  tools.py
tests/: test_server.py
